crates/parser/src/snapshots/parser__tests__parse_inline_err@0106_datatypes_stmt_trailing_and.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatypes Foo := bar &&\n"
input_file: crates/parser/test_data/parser/inline/err/stmt/0106_datatypes_stmt_trailing_and.ath
---
DATATYPES_STMT
  DATATYPES_KW "datatypes"
  WHITESPACE " "
  STRUCTURE_DEF
    STRUCTURE_NAME_DEF
      IDENT_SORT_DECL
        NAME
          IDENT "Foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    CONSTANT_CONSTRUCTOR
      NAME
        IDENT "bar"
  WHITESPACE " "
  AMP2 "&&"
  WHITESPACE "\n"
error 23: expected a datatype definition following the `&&`

