crates/parser/src/snapshots/parser__tests__parse_inline_err@0114_extend_module_no_rbrace.ath.snap
---
source: crates/parser/src/tests.rs
description: "extend-module foo {\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0114_extend_module_no_rbrace.ath
---
EXTEND_MODULE_DIR
  EXTEND_MODULE_KW "extend-module"
  WHITESPACE " "
  NAME_REF
    IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "\n"
error 19: expected R_CURLY

