crates/parser/src/snapshots/parser__tests__parse_inline_err@0119_map_binding_no_key.ath.snap
---
source: crates/parser/src/tests.rs
description: "|{ := 1 }|\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0119_map_binding_no_key.ath
---
MAP_EXPR
  PIPE_CURLY "|{"
  WHITESPACE " "
  MAP_BINDING
    COLON_EQ ":="
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "1"
  WHITESPACE " "
  CURLY_PIPE "}|"
  WHITESPACE "\n"
error 3: Expected to find a key (phrase) for the map binding

