crates/parser/src/snapshots/parser__tests__parse_inline_err@0120_map_binding_no_value.ath.snap
---
source: crates/parser/src/tests.rs
description: "|{ foo := }|\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0120_map_binding_no_value.ath
---
MAP_EXPR
  PIPE_CURLY "|{"
  WHITESPACE " "
  MAP_BINDING
    IDENT_EXPR
      NAME_REF
        IDENT "foo"
    WHITESPACE " "
    COLON_EQ ":="
  WHITESPACE " "
  CURLY_PIPE "}|"
  WHITESPACE "\n"
error 9: expected expression

