crates/parser/src/snapshots/parser__tests__parse_inline_err@0127_infer_by_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "{ A by B on }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0127_infer_by_no_phrase.ath
---
INFER_BLOCK_DED
  L_CURLY "{"
  WHITESPACE " "
  MAYBE_NAMED_INFERENCE
    INFERENCE
      INFER_BY
        IDENT_EXPR
          NAME_REF
            IDENT "A"
        WHITESPACE " "
        BY_KW "by"
        WHITESPACE " "
        IDENT_EXPR
          NAME_REF
            IDENT "B"
        WHITESPACE " "
        ON_KW "on"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 11: expected phrase to infer on

