crates/parser/src/snapshots/parser__tests__parse_inline_err@0143_and_expr_error.ath.snap
---
source: crates/parser/src/tests.rs
description: "(&& bar domain D)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0143_and_expr_error.ath
---
AND_EXPR
  L_PAREN "("
  AMP2 "&&"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE " "
  ERROR
    DOMAIN_KW "domain"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "D"
  R_PAREN ")"
  WHITESPACE "\n"
error 8: Expected to find a phrase in the and expression

